--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "fast-xml-parser": "^4.2.6",
     "jszip": "3.10.1",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
